--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,5 @@ add_executable(1-TwoSum editor/cn/1-TwoSum.cpp)
 add_executable(2-AddTwoNumbers editor/cn/2-AddTwoNumbers.cpp)
 add_executable(344-ReverseString editor/cn/344-ReverseString.cpp)
 add_executable(541-ReverseStringII editor/cn/541-ReverseStringII.cpp)
+add_executable(24-SwapNodesInPairs editor/cn/24-SwapNodesInPairs.cpp)
+add_executable(206-ReverseLinkedList editor/cn/206-ReverseLinkedList.cpp)
