--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,6 @@ add_executable(344-ReverseString editor/cn/344-ReverseString.cpp)
 add_executable(541-ReverseStringII editor/cn/541-ReverseStringII.cpp)
 add_executable(24-SwapNodesInPairs editor/cn/24-SwapNodesInPairs.cpp)
 add_executable(206-ReverseLinkedList editor/cn/206-ReverseLinkedList.cpp)
+add_executable(232-ImplementQueueUsingStacks editor/cn/232-ImplementQueueUsingStacks.cpp)
+add_executable(20-ValidParentheses editor/cn/20-ValidParentheses.cpp)
+add_executable(1047-RemoveAllAdjacentDuplicatesInString editor/cn/1047-RemoveAllAdjacentDuplicatesInString.cpp)
