--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,13 @@ add_executable(206-ReverseLinkedList editor/cn/206-ReverseLinkedList.cpp)
 add_executable(232-ImplementQueueUsingStacks editor/cn/232-ImplementQueueUsingStacks.cpp)
 add_executable(20-ValidParentheses editor/cn/20-ValidParentheses.cpp)
 add_executable(1047-RemoveAllAdjacentDuplicatesInString editor/cn/1047-RemoveAllAdjacentDuplicatesInString.cpp)
+add_executable(239-SlidingWindowMaximum editor/cn/239-SlidingWindowMaximum.cpp)
+add_executable(347-TopKFrequentElements editor/cn/347-TopKFrequentElements.cpp)
+add_executable(17-LetterCombinationsOfAPhoneNumber editor/cn/17-LetterCombinationsOfAPhoneNumber.cpp)
+add_executable(131-PalindromePartitioning editor/cn/131-PalindromePartitioning.cpp)
+add_executable(93-RestoreIPAddresses editor/cn/93-RestoreIPAddresses.cpp)
+add_executable(90-SubsetsII editor/cn/90-SubsetsII.cpp)
+add_executable(491-NonDecreasingSubsequences editor/cn/491-NonDecreasingSubsequences.cpp)
+add_executable(46-Permutations editor/cn/46-Permutations.cpp)
+add_executable(47-PermutationsII editor/cn/47-PermutationsII.cpp)
+add_executable(455-AssignCookies editor/cn/455-AssignCookies.cpp)
