--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,7 @@ add_executable(53-MaximumSubarray editor/cn/53-MaximumSubarray.cpp)
 add_executable(122-BestTimeToBuyAndSellStockII editor/cn/122-BestTimeToBuyAndSellStockII.cpp)
 add_executable(55-JumpGame editor/cn/55-JumpGame.cpp)
 add_executable(45-JumpGameII editor/cn/45-JumpGameII.cpp)
+add_executable(1005-MaximizeSumOfArrayAfterKNegations editor/cn/1005-MaximizeSumOfArrayAfterKNegations.cpp)
+add_executable(134-GasStation editor/cn/134-GasStation.cpp)
+add_executable(135-Candy editor/cn/135-Candy.cpp)
+add_executable(406-QueueReconstructionByHeight editor/cn/406-QueueReconstructionByHeight.cpp)
