--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,7 @@ add_executable(134-GasStation editor/cn/134-GasStation.cpp)
 add_executable(135-Candy editor/cn/135-Candy.cpp)
 add_executable(406-QueueReconstructionByHeight editor/cn/406-QueueReconstructionByHeight.cpp)
 add_executable(1365-HowManyNumbersAreSmallerThanTheCurrentNumber editor/cn/1365-HowManyNumbersAreSmallerThanTheCurrentNumber.cpp)
+add_executable(452-MinimumNumberOfArrowsToBurstBalloons editor/cn/452-MinimumNumberOfArrowsToBurstBalloons.cpp)
+add_executable(746-MinCostClimbingStairs editor/cn/746-MinCostClimbingStairs.cpp)
+add_executable(62-UniquePaths editor/cn/62-UniquePaths.cpp)
+add_executable(63-UniquePathsII editor/cn/63-UniquePathsII.cpp)
