--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,3 +42,7 @@ add_executable(739-DailyTemperatures editor/cn/739-DailyTemperatures.cpp)
 add_executable(763-PartitionLabels editor/cn/763-PartitionLabels.cpp)
 add_executable(343-IntegerBreak editor/cn/343-IntegerBreak.cpp)
 add_executable(96-UniqueBinarySearchTrees editor/cn/96-UniqueBinarySearchTrees.cpp)
+add_executable(416-PartitionEqualSubsetSum editor/cn/416-PartitionEqualSubsetSum.cpp)
+add_executable(1207-UniqueNumberOfOccurrences editor/cn/1207-UniqueNumberOfOccurrences.cpp)
+add_executable(189-RotateArray editor/cn/189-RotateArray.cpp)
+add_executable(151-ReverseWordsInAString editor/cn/151-ReverseWordsInAString.cpp)
