--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,3 +59,4 @@ add_executable(518-CoinChangeII editor/cn/518-CoinChangeII.cpp)
 add_executable(377-CombinationSumIV editor/cn/377-CombinationSumIV.cpp)
 add_executable(322-CoinChange editor/cn/322-CoinChange.cpp)
 add_executable(279-PerfectSquares editor/cn/279-PerfectSquares.cpp)
+add_executable(110-BalancedBinaryTree editor/cn/110-BalancedBinaryTree.cpp)
